# obsea-drift-monitor

./: Dockerfile  JenkinsConstants.groovy  LICENSE  README.md  ai4-metadata.yml  metadata.json  pyproject.toml  tox.ini
.sqa/: config.yml  dockerfile
api/: __init__.py  config.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-obsea_drift_monitor_start.ipynb
obsea_drift_monitor/: README.md  __init__.py  config.py  utils.py
tests/: README.md
tests/test_metadata/: test_requirements.py
