[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "obsea-drift-monitor"
authors = [
    { name = "Borja Esteban Sanchis", email = "boressan@outlook.com" },
]
description = "Drift detector and monitor for obsea data adquisition."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/ai4os-hub/obsea-drift-monitor"
"Bug Tracker" = "https://github.com/ai4os-hub/obsea-drift-monitor/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = [
    "OBSEA_DRIFT_MONITOR_DATA_PATH=tests/data",
    "OBSEA_DRIFT_MONITOR_MODELS_PATH=tests/models",
]
# Allow test files to share names
# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = [
    "obsea_drift_monitor",
    "obsea_drift_monitor.api",
]

[tool.setuptools.package-dir]
"obsea_drift_monitor.api" = "api"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
obsea_drift_monitor = "obsea_drift_monitor.api"
